# fridge-manager

./: LICENSE  README.md
api/: .env  Cargo.toml
api/docker/: Dockerfile  docker-compose.yml
api/migrations/: 20240301060338_item.sql  20240608081523_user.sql  20240609010501_session.sql  20240609054611_session.sql
api/src/: error_type.rs  handlers.rs  lib.rs  middleware.rs  model.rs  routers.rs
api/src/handlers/: auth_handle.rs  handler.rs  mod.rs  repository_handles.rs  session_handle.rs  utility.rs
api/src/middleware/: auth.rs  session.rs  session_extract.rs
api/src/model/: app_logic.rs  auth.rs  data_type.rs  mod.rs  repository.rs
api/src/routers/: marge_route.rs  mod.rs
api/src/store/: app_logic.rs  mod.rs
front/: index.html  package-lock.json  package.json
front/src/: App.tsx  index.css  main.tsx
front/src/api/: auth.ts  callApi.ts  session.ts
front/src/components/: EditItem.tsx  FoodApp.tsx  FoodItem.tsx  Header.tsx  InputItem.tsx  ItemList.tsx  SignIn.tsx  SignUp.tsx
front/src/types/: itemType.ts  middleware.ts
