[package]
name = "fridge-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
dotenvy = "0.15.7"
serde ={ version = "1.0.197", features = ["derive"] }
sqlx ={ version = "0.7.3",  features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio ={ version = "1.25.0", features = ["full"] }
tower ={ version = "0.4.13", features = ["full"] }
tower-http ={ version = "0.5.1", features = ["full"] }
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"



[lib]
name = "api"
path = "./src/lib.rs"