[package]
name = "fridge-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
chrono ={ version = "0.4.35", features = ["serde"]}
dotenvy = "0.15.7"
serde ={ version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx ={ version = "0.7.3",  features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio ={ version = "1.25.0", features = ["full"] }
tower ={ version = "0.4.13", features = ["full"] }
tower-http ={ version = "0.5.1", features = ["cors"] }
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.18.0", features = ["derive"] }



[lib]
name = "api"
path = "./src/lib.rs"